--- a/ansible_project/roles/nginx/templates/public/tags/index.html
+++ b/ansible_project/roles/nginx/templates/public/tags/index.html
@@ -17,7 +17,7 @@
 {
     "@context": "http://schema.org",
     "@type": "WebSite",
-    "name": "Горбунов Владимир. Группа SYS-19",
+    "name": "Чижиков Павел. Группа Sys-41",
     
     "url": "https:\/\/diplom.mr-night.space\/"
 }
@@ -38,14 +38,14 @@
 <meta property="og:image" content="https://diplom.mr-night.space/img/avatar-icon.png" />
 <meta property="og:url" content="https://diplom.mr-night.space/tags/" />
 <meta property="og:type" content="website" />
-<meta property="og:site_name" content="Горбунов Владимир. Группа SYS-19" />
+<meta property="og:site_name" content="Чижиков Павел. Группа Sys-41" />
 
   <meta name="twitter:title" content="Tags" />
   <meta name="twitter:image" content="https://diplom.mr-night.space/img/avatar-icon.png" />
   <meta name="twitter:card" content="summary_large_image" />
   <link href='https://diplom.mr-night.space/img/favicon.ico' rel='icon' type='image/x-icon'/>
   <meta name="generator" content="Hugo 0.119.0">
-  <link rel="alternate" href="https://diplom.mr-night.space/index.xml" type="application/rss+xml" title="Горбунов Владимир. Группа SYS-19"><link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/katex@0.16.7/dist/katex.min.css" integrity="sha384-3UiQGuEI4TTMaFmGIZumfRPtfKQ3trwQE2JgosJxCnGmQpL/lJdjpcHkaaFwHlcI" crossorigin="anonymous">
+  <link rel="alternate" href="https://diplom.mr-night.space/index.xml" type="application/rss+xml" title="Чижиков Павел. Группа Sys-41"><link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/katex@0.16.7/dist/katex.min.css" integrity="sha384-3UiQGuEI4TTMaFmGIZumfRPtfKQ3trwQE2JgosJxCnGmQpL/lJdjpcHkaaFwHlcI" crossorigin="anonymous">
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.5.0/css/all.css" integrity="sha384-B4dIYHKNBt8Bc12p+WXckhzcICo0wtJAoU8YZTY5qE0Id1GSseTk6S+L3BlXeVIU" crossorigin="anonymous">
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@3.4.1/dist/css/bootstrap.min.css" integrity="sha384-HSMxcRTRxnN+Bdg0JdbxYKrThecOKuH5zCYotlSAcp1+c8xmyTe9GYg1l9a69psu" crossorigin="anonymous"><link rel="stylesheet" href="https://diplom.mr-night.space/css/main.css" /><link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Lora:400,700,400italic,700italic" />
   <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Open+Sans:300italic,400italic,600italic,700italic,800italic,400,300,600,700,800" />
@@ -64,7 +64,7 @@
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </button>
-      <a class="navbar-brand" href="https://diplom.mr-night.space/">Горбунов Владимир. Группа SYS-19</a>
+      <a class="navbar-brand" href="https://diplom.mr-night.space/">Чижиков Павел. Группа Sys-41</a>
     </div>
 
     <div class="collapse navbar-collapse" id="main-navbar">
@@ -80,8 +80,8 @@
     
       <div class="avatar-container">
         <div class="avatar-img-border">
-          <a title="Горбунов Владимир. Группа SYS-19" href="https://diplom.mr-night.space/">
-            <img class="avatar-img" src="https://diplom.mr-night.space/img/avatar-icon.png" alt="Горбунов Владимир. Группа SYS-19" />
+          <a title="Чижиков Павел. Группа Sys-41" href="https://diplom.mr-night.space/">
+            <img class="avatar-img" src="https://diplom.mr-night.space/img/avatar-icon.png" alt="Чижиков Павел. Группа Sys-41" />
           </a>
         </div>
       </div>
@@ -203,7 +203,7 @@
           
               <li>
 		
-		  <a href="mailto:night.vago@gmail.com" title="Email me">
+		  <a href="mailto:chizhpaul@gmail.com" title="Email me">
 		
                   <span class="fa-stack fa-lg">
                     <i class="fas fa-circle fa-stack-2x"></i>
@@ -213,7 +213,7 @@
               </li>
               <li>
 		
-		  <a href="https://github.com/Night-N" title="GitHub">
+		  <a href="https://github.com/chizhpaul" title="GitHub">
 		
                   <span class="fa-stack fa-lg">
                     <i class="fas fa-circle fa-stack-2x"></i>
@@ -247,7 +247,7 @@
 
           
             &nbsp;&bull;&nbsp;
-            <a href="https://diplom.mr-night.space/">Горбунов Владимир. Группа SYS-19</a>
+            <a href="https://diplom.mr-night.space/">Чижиков Павел. Группа Sys-41</a>
           
         </p>
         
